# xgboost

./: .gitmodules  CMakeLists.txt  Makefile  gitshallow_submodules.sh  go.sh
cmake/: Cuda.cmake
include/xgboost/: tree_model.h
plugin/updater_gpu/: CMakeLists.txt  README.md  get_cuda_sm.sh  gitshallow_submodules.sh
plugin/updater_gpu/benchmark/: benchmark.py
plugin/updater_gpu/src/: common.cuh  device_helpers.cuh  find_split.cuh  find_split_multiscan.cuh  gpu_builder.cu  gpu_data.cuh  gpu_hist_builder.cu  gpu_hist_builder.cuh  updater_gpu.cc  updater_gpu.cu
plugin/updater_gpu/src/exact/: argmax_by_key.cuh  gpu_builder.cuh
plugin/updater_gpu/test/: test.py
plugin/updater_gpu/test/python/: test.py  test_large.py
python-package/xgboost/: core.py
src/c_api/: c_api.cc
src/common/: hist_util.h
src/tree/: param.h
